[OA][OPS-5763] Font size & spacing seems unusually small fixed

--- a/public/css/self-service-time-to-pay.css
+++ b/public/css/self-service-time-to-pay.css
@@ -519,6 +519,6 @@ details summary:focus,
     font-size: 19px;
 }
 
-.margin-top-30 details {
+.details-margin {
     margin-bottom:20px;
 }
